name: dtd-text
version: 0.2.0.0
synopsis: Parse and render XML DTDs
description:
  This library provides means to parse XML Document Type Declaration (DTD) documents.
license: BSD3
license-file: license.txt
author: Yitzchak Gale,
        Montez Fitzpatrick
maintainer: Montez Fitzpatrick <montezf@gmail.com>
build-type: Simple
cabal-version: >=1.6
category: Data, Text, XML, Parsing
stability: experimental
bug-reports: https://github.com/m15k/hs-dtd-text/issues
homepage: http://github.com/m15k/hs-dtd-text

library
  build-depends:
      base
    , containers
    , text
    , dtd-types >= 0.4.0.0
    , xml-types
    , attoparsec

  exposed-modules:
    Data.XML.DTD.Parse
    Data.XML.DTD.Render

source-repository head
  type: git
  location: https://github.com/m15k/hs-dtd-text/
